# Noted_Backend

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml
src/core/: config.py  database.py
src/functions/: auth.py  send_email.py
src/models/: note.py  otp.py  session_data.py
src/routers/: auth.py  notes.py
